# single-node-optimisation-course

lab2_nbody/part1_standard_opti/src/: Space.h  Space.hxx  main.cpp
lab2_nbody/part1_standard_opti/src/ogl/: OGLControl.h  OGLSpheresVisu.h  OGLSpheresVisu.hxx  OGLSpheresVisuGS.h  OGLSpheresVisuGS.hxx  OGLSpheresVisuInst.h  OGLSpheresVisuInst.hxx  OGLSpheresVisuNo.h  OGLSpheresVisuNo.hxx  OGLTools.cpp  OGLTools.h
lab2_nbody/part1_standard_opti/src/ogl/shaders/: fragment130.glsl  fragment150.glsl  fragment330.glsl  geometry150.glsl  geometry330.glsl
lab2_nbody/part1_standard_opti/src/utils/: ArgumentsReader.h  Perf.cpp  Perf.h
lab2_nbody/part2_vectorization/: CMakeLists.txt
lab2_nbody/part2_vectorization/doc/: myIntrinsics.html  myIntrinsics.md
lab2_nbody/part2_vectorization/src/: Space.h  Space.hxx  main.cpp
lab2_nbody/part2_vectorization/src/ogl/: OGLControl.cpp  OGLSpheresVisu.h  OGLSpheresVisu.hxx  OGLSpheresVisuGS.h  OGLSpheresVisuGS.hxx  OGLSpheresVisuInst.h  OGLSpheresVisuInst.hxx  OGLSpheresVisuNo.h  OGLSpheresVisuNo.hxx
lab2_nbody/part2_vectorization/src/ogl/shaders/: vertex130.glsl  vertex150.glsl  vertex330.glsl
lab2_nbody/part2_vectorization/src/utils/: ArgumentsReader.cpp  Perf.cpp  myIntrinsics.h  typeVector.h
